<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.persist.desktoppet.view.activity.DetailActivity">

    <ImageView
        android:id="@+id/pet_sex"
        android:src="@mipmap/ic_pet_boy"
        android:layout_margin="@dimen/item_margin"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/PetAttrTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />
        <TextView
            style="@style/PetAttrContentStyle"
            android:background="@null"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View style="@style/DividerStyle" />
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/PetAttrTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age" />
        <TextView
            style="@style/PetAttrContentStyle"
            android:id="@+id/pet_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View style="@style/DividerStyle"/>
    <LinearLayout
        android:visibility="gone"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/PetAttrTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />
        <TextView
            style="@style/PetAttrContentStyle"
            android:id="@+id/pet_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View style="@style/DividerStyle" />
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/PetAttrTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phrase" />
        <TextView
            style="@style/PetAttrContentStyle"
            android:background="@null"
            android:id="@+id/pet_phrase"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View style="@style/DividerStyle" />
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/PetAttrTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac" />
        <TextView
            style="@style/PetAttrContentStyle"
            android:background="@null"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/pet_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
